--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -15,7 +15,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="/">
         <svg class="bi bi-book mr-2" width="1.4em" height="1.4em" viewBox="0 0 16 16" fill="currentColor"
           xmlns="http://www.w3.org/2000/svg">
@@ -82,7 +82,7 @@
 
     </nav>
 
-    <div class="container py-3">
+    <div class="container">
       <!------ MESSAGE SECTION -------->
       {% if messages %}
 
@@ -137,6 +137,8 @@
       <!------------ END PAGINATION --------------->
 
     </div>
+
+
 
     <footer class="text-center my-credit">
       Written with Django &copy; <strong>Nguyen Thanh Hung</strong>, 2020
