--- a/catalog/templates/catalog/author_form.html
+++ b/catalog/templates/catalog/author_form.html
@@ -3,12 +3,14 @@
 
 {% block content %}
 
-<form action="" method="POST">
-  {% csrf_token %}
+<div class="my-list">
+  <form action="" method="POST">
+    {% csrf_token %}
 
-  {{ form | crispy }}
+    {{ form | crispy }}
 
-  <input class="btn btn-block my-btn" type="submit" value="Submit">
-</form>
+    <input class="btn btn-block my-btn" type="submit" value="Submit">
+  </form>
+</div>
 
 {% endblock content %}
