--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -2,15 +2,20 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h1>Create an account</h1>
 
-<form action="" method="post">
-  {% csrf_token %}
+<div class="my-list">
+  <h1>Create an account</h1>
 
-  {{ form | crispy }}
+  <form action="" method="post">
+    {% csrf_token %}
 
-  <input class="btn btn-block " type="submit" value="Sign-up">
+    {{ form | crispy }}
 
-</form>
+    <input class="btn btn-block " type="submit" value="Sign-up">
+
+  </form>
+</div>
+
+
 
 {% endblock content %}
