Fix Register Form, messages, Book List

--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -103,7 +103,22 @@
       {% endfor %}
       {% endif %}
       <!------ END MESSAGE SECTION -------->
-
+      <!------ ERRORS SECTION ------>
+      {% if form.errors %}
+      {% for field in form %}
+      {% for error in field.errors %}
+      <div class="alert alert-danger" role="alert">
+        <strong>{{ error|escape }}</strong>
+      </div>
+      {% endfor %}
+      {% endfor %}
+      {% for error in form.non_field_errors %}
+      <div class="alert alert-danger" role="alert">
+        <strong>{{ error|escape }}</strong>
+      </div>
+      {% endfor %}
+      {% endif %}
+      <!------ END ERRORS SECTION ------>
       <h1>
         {% block heading %}
         {% endblock heading %}
