--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -27,7 +27,7 @@
   </form>
 
   <a href="{% url 'password_reset' %}">
-    <p class="my-3"> Lost password?</p>
+    <p class="text-muted my-3"> Lost password?</p>
   </a>
 </div>
 
