--- a/catalog/templates/catalog/available_books.html
+++ b/catalog/templates/catalog/available_books.html
@@ -15,7 +15,7 @@
     {% for book, copies in book_list %}
 
     <div class="card ">
-      <div class="card-header bg-dg" id="headingOne">
+      <div class="card-header bg-dark" id="headingOne">
         <h2 class="mb-0">
           <button class="btn btn-block text-left font-weight-bold text-my" type="button" data-toggle="collapse"
             data-target="#book-{{book.id}}" aria-expanded="true" aria-controls="book-{{book.id}}">
