--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,16 +3,12 @@
 
 {% block content %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
 {% if next %}
 
 {% if user.is_authenticated %}
-<p>Please login with an account that has access.</p>
+<p class="alert alert-warning" role="alert">Please login with an account that has access.</p>
 {% else %}
-<p>Please login to view.</p>
+<p class="alert alert-warning" role="alert">Please login to view.</p>
 {% endif %}
 
 {% endif %}
