--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -171,7 +171,7 @@
 
 
     <footer class="text-center my-credit">
-      Written with Django &copy; <strong>Nguyen Thanh Hung</strong>, 2020
+      Written with Django &copy; <strong>Nguyễn Thanh Hùng</strong>, 2020
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
