--- a/catalog/templates/catalog/books_loaned_by_user.html
+++ b/catalog/templates/catalog/books_loaned_by_user.html
@@ -32,7 +32,7 @@
 
 {% else %}
 
-<p>You are currently borrowing no books.</p>
+<p>You are currently borrowing no books. <a href="{% url 'avail_books' %}">Borrow some!</a></p>
 
 {% endif %}
 
