--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Logged out!</h1>
-<p><a href="{% url 'login' %}">Login again</a></p>
+<h1>{{ title }}</h1>
+<p><a href="{% url 'login' %}">Login again?</a></p>
 
 {% endblock content %}
