--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -48,7 +48,7 @@
 
         <li class="nav-item"><a class="nav-link text-white" href="{% url 'login' %}?next={{request.path}}">Login</a>
         </li>
-        <li class="nav-item"> <a class="nav-link text-white" href="{% url 'register' %}">Register</a></li>
+        <li class="nav-item"> <a class="nav-link text-white" href="{% url 'pre-register' %}">Register</a></li>
 
         {% endif %}
       </ul>
@@ -167,8 +167,7 @@
       <!------------ END PAGINATION --------------->
 
     </div>
-
-
+    <!--End Container-->
 
     <footer class="text-center my-credit">
       Written with Django &copy; <strong>Nguyễn Thanh Hùng</strong>, 2020
