Beautify the Home Page! & some minor tweaks.

--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -99,3 +99,9 @@ footer {
   background-color: var(--light-orange);
   padding: 16px;
 }
+
+.so-lieu {
+  background-color: lightsteelblue;
+  font-weight: bold;
+  text-align: center;
+}
