--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -103,7 +103,11 @@ footer {
   letter-spacing: 0.1em;
 }
 .django {
-  color: var(--light-green);
+  padding: 0.2em 0.5em;
+  background-color: #245124;
+  color: white;
+  border: 1px solid #ddd;
+  border-radius: 0.3em;
   font-weight: bold;
   font-size: 1.2em;
   letter-spacing: initial;
