Restyle a bit, test coverage, addopts, users/login

--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -57,6 +57,13 @@ body {
   font-weight: bold;
 }
 
+.jumbotron .display-4 {
+  text-align: center;
+}
+.tieu-de-page {
+  text-align: center;
+}
+
 .bg-success,
 .bg-danger {
   color: #eee;
