--- a/catalog/static/styles.scss
+++ b/catalog/static/styles.scss
@@ -5,44 +5,16 @@
   --light-orange: #f4a261;
   --dark-orange: #e76f51;
   --black-blue: #343a40;
+  --bgPrimary: rgb(18, 64, 18);
+  --bgSecondary: rgb(159, 35, 35);
+  --textPrimary: purple;
+  --textSecondary: orange;
 }
 
 body {
   background-color: var(--dark-green);
   color: var(--dark-green);
 }
-/* --- CUSTOM BG & TEXT --- */
-.bg-lg {
-  background-color: var(--light-green);
-}
-.text-lg {
-  color: var(--light-green);
-}
-.bg-dg {
-  background-color: var(--dark-green);
-}
-.text-dg {
-  color: var(--dark-green);
-}
-.bg-my {
-  background-color: var(--my-yellow);
-}
-.text-my {
-  color: var(--my-yellow);
-}
-.bg-lo {
-  background-color: var(--light-orange);
-}
-.text-lo {
-  color: var(--light-orange);
-}
-.bg-do {
-  background-color: var(--dark-orange);
-}
-.text-do {
-  color: var(--dark-orange);
-}
-/* --- END CUSTOM ---*/
 
 .my-container {
   background-color: var(--my-yellow);
