--- a/users/templates/users/email_form.html
+++ b/users/templates/users/email_form.html
@@ -9,7 +9,7 @@
   <form action="" method="post">
     {% csrf_token %}
     {{ form | crispy }}
-    <input class="btn btn-block my-btn" type="submit" value="Send!">
+    <input class="btn btn-block btn-primary" type="submit" value="Send!">
   </form>
 </div>
 
