--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -8,9 +8,9 @@
 
     <title>Local Library - {% block title %}{% endblock title %}</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="{% static 'css/main.min.css' %}">
   </head>
 
   <body>
@@ -34,7 +34,7 @@
         <li class="nav-item dropdown">
           <a href="#" class="nav-link text-white dropdown-toggle" id="userDropdown" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            Xin chao <strong>{{ user.get_username }}</strong>
+            Chao <strong>{{ user.get_username }}</strong>
           </a>
 
           <div class="dropdown-menu" aria-labelledby="userDropdown">
