--- a/catalog/templates/catalog/author_form.html
+++ b/catalog/templates/catalog/author_form.html
@@ -9,7 +9,7 @@
 
     {{ form | crispy }}
 
-    <input class="btn btn-block my-btn" type="submit" value="Submit">
+    <input class="btn btn-block btn-primary" type="submit" value="Submit">
   </form>
 </div>
 
