--- a/catalog/templates/catalog/available_books.html
+++ b/catalog/templates/catalog/available_books.html
@@ -38,7 +38,7 @@
 
               {% if user.is_authenticated %}
               <a href="{% url 'borrow_a_book' copy_.pk %}">
-                <span class="btn my-btn ml-2">Borrow</span>
+                <span class="btn btn-primary ml-2">Borrow</span>
               </a>
               {% endif %}
             </li>
