--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -18,7 +18,7 @@
     {% csrf_token %}
     {{ form | crispy }}
 
-    <input class="btn btn-block my-btn" type="submit" value="Login">
+    <input class="btn btn-block btn-primary" type="submit" value="Login">
     <input type="hidden" name="next" value="{{ next }}">
   </form>
 
