--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -10,7 +10,7 @@
 
     {{ form | crispy }}
 
-    <input class="btn btn-block my-btn" type="submit" value="Sign Up">
+    <input class="btn btn-block btn-primary" type="submit" value="Sign Up">
 
   </form>
 </div>
