--- a/catalog/templates/catalog/author_list.html
+++ b/catalog/templates/catalog/author_list.html
@@ -10,7 +10,7 @@ All Authors {% endblock title %}({{ num_of_authors }})
 
 
   {% if perms.catalog.add_author %}
-  <a class="btn btn-primary" href="{% url 'author_create' %}">Create Author</a>
+  <a class="btn btn-primary btn-center" href="{% url 'author_create' %}">Create Author</a>
   {% endif %}
 
 </div>
