--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -11,6 +11,7 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="{% static 'css/main.min.css' %}">
+    <link rel="stylesheet" href="{% static 'styles111.css' %}">
   </head>
 
   <body>
@@ -172,8 +173,9 @@
     </div>
     <!--End Container-->
 
-    <footer class="text-center my-credit">
-      Written with <span class="django">Django</span> &copy; <strong>Nguyễn Thanh Hùng</strong>, 2020
+    <footer class="">
+      <div>Written with <span class="django">Django</span></div>
+      <div class="my-name"><strong>Nguyễn Thanh Hùng</strong> &copy; 2020</div>
     </footer>
 
     {% block extra_script %}
